[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mmpy_bot"
author = "Alex Tzonkov"
author-email = "alex.tzonkov@gmail.com"
home-page = "https://pypi.org/project/mmpy-bot/"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"

